# index-repo

./: .env  .gitignore  README.md  api_example.py  cli.py  db_op.py  docker-compose.yml  index.py  pyproject.toml  query.py  query_functions.py  requirements.txt  test_advanced_analysis.py  test_analysis.py  test_function_bodies.py  test_nl_query.py
.cursor/rules/: python-modular-design-rule.mdc
docs/: build_tools_guide.md  clang_analyzer_guide.md  folly_analysis_comprehensive.md  hiredis_analysis_report.md  project_structure.md  visualization_guide.md
scripts/: check_neo4j.py  clang_utils.py  clear_and_reindex_folly.py  code_finder.py  query_by_description.py
src/: __init__.py  __main__.py  code_analyzer.py  code_extractor.py  dgraph_client.py  main.py  mcp_indexer.py  mcp_server.py  query_generator.py
src/cmd/: embedding_index.py  nlquery.py
src/config/: __init__.py  libclang_config.py  settings.py
src/controllers/: __init__.py  analysis_controller.py  mcp_controller.py
src/index_repo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  class_model.py  function_model.py
src/services/: __init__.py  clang_analyzer_service.py  class_hierarchy_service.py  compile_commands_service.py  embedding_index_service.py  helixdb_service.py  integrated_index_service.py  mcp_index_service.py  neo4j_service.py  search_service.py
src/utils/: __init__.py  cflow_parser.py  compile_commands.py  dot_parser.py  embedder.py  file_utils.py  parse_utils.py  parser.py  scanner.py  visualization.py
test_files/: class_hierarchy_test.cpp  concepts_test.cpp  operator_overload_test.cpp  template_test.cpp  test.c  test.cpp  test_calls.cpp  test_sample.cpp  test_simple.cpp  test_virtual_methods.cpp
test_repo/: main.cpp  order_system.cpp  order_system.h
test_scripts/: README.md  analyze_c_code.py  analyze_templates.py  clear_and_reindex_folly.py  debug_neo4j_data.py  debug_query.py  exclude_test_search.py  find_entry_points.py  find_main_functions.py  find_sfinae_functions.py  generate_folly_callgraph.py  incremental_index.py  index_directory.py  indexing_tools.py  query_function_calls.py  template_metaprogramming_test.cpp  test_basic_analyzer.py  test_call_detection.py  test_clang_analyzer.py  test_clang_analyzer_v2.py  test_class_hierarchy.py  test_class_hierarchy_analyzer.py  test_compile_commands.py  test_concepts_analysis.py  test_cross_file_references.py  test_cypher_query.py  test_neo4j.py  test_operator_analysis.py  test_template_analysis_direct.py  test_template_analyzer.py  test_template_metaprogramming.py  test_virtual_hierarchy.py  validate_template_features.py  visualization_tools.py
