[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "index-repo"
version = "0.1.0"
description = "A project for code analysis and querying."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.poetry.dependencies]
python = "^3.12"
libclang = ">=16.0.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
pydgraph = ">=21.3.0"
langchain = ">=0.1.0"
deepseek-ai = "==0.0.1"
langchain-community = ">=0.0.1"
# Add your dependencies here, for example:
# requests = "^2.25.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here, for example:
# pytest = "^6.2.5"

[project]
name = "index-repo"
version = "0.1.0"
description = "A project for code analysis and querying."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "libclang>=16.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-core>=2.0.0",
    "typing-extensions>=4.0.0",
    "typing-inspection>=0.4.0",
    "annotated-types>=0.6.0",
    "pydgraph>=21.3.0",
    "grpcio>=1.40.0",
    "protobuf<=3.20.3",
    "langchain>=0.1.15, <2.0.0",
    "langchain-core>=0.3.47, <2.0.0",
    "langsmith>=0.1.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.0.0",
    "jsonpatch>=1.33",
    "jsonpointer>=2.0",
    "packaging>=23.0",
    "langchain-text-splitters>=0.0.1, <2.0.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "urllib3>=1.25.0",
    "idna>=2.5",
    "certifi>=2020.06.20",
    "PyYAML>=5.0",
    "requests-toolbelt>=0.9.0",
    "httpx>=0.20.0",
    "zstandard>=0.15.0",
    "deepseek-ai==0.0.1",
    "langchain-community>=0.0.30, <2.0.0",
    "langchain-deepseek==0.1.3",
    "openai>=1.0.0",
    "sniffio>=1.0.0",
    "anyio>=3.0.0",
    "distro>=1.0.0",
    # Add your dependencies here, for example:
    # "requests>=2.25.1",
]

[tool.uv]
# Configuration for uv can go here if needed, for example:
# offline = true