[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-indexer"
version = "0.1.0"
description = "A tool for analyzing C/C++ code using cflow and Neo4j"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "neo4j>=5.15.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-sugar>=0.9.7",
    "mypy>=1.4.1",
    "pylint>=2.17.5",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "click>=8.1.6",
    "colorama>=0.4.6",
    "pytest-xdist>=3.3.1",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/username/code-indexer"
"Bug Tracker" = "https://github.com/username/code-indexer/issues"

[project.scripts]
code-indexer = "src.__main__:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "duplicate-code",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"